# forest

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md
.github/workflows/: build.yml
include/: ac_museum_fish_priv.h  ac_tools.h  boot.h  cmath.h  game.h  graph.h  irqmgr.h  jsyswrap.h  lb_rtc.h  m_actor.h  m_card.h  m_flashrom.h  m_lib.h  m_nmibuf.h  main.h  padmgr.h  sys_math.h  sys_vimgr.h  types.h  zurumode.h
include/Famicom/: famicom.h  famicomPriv.h  ks_nes_common.h
include/GBA/: GBAPriv.h
include/JSystem/: JGeometry.h  JMacro.h  ResTIMG.h
include/JSystem/J2D/: J2DGXColorS10.h  J2DGrafContext.h  J2DIndBlock.h
include/JSystem/JFramework/: JFWDisplay.h  JFWSystem.h
include/JSystem/JGadget/: linklist.h
include/JSystem/JKernel/: JKRAram.h  JKRDecomp.h  JKRDisposer.h  JKRFile.h  JKRFileLoader.h  JKRHeap.h  JKRThread.h
include/JSystem/JSupport/: JSUFileInputStream.h  JSUInputStream.h  JSURandomInputStream.h  JSUStreamEnum.h
include/JSystem/JUtility/: JUTAssertion.h  JUTByteswap.h  JUTDirectPrint.h  JUTFont.h  JUTProcBar.h  JUTVideo.h  JUTXfb.h
include/PowerPC_EABI_Support/MetroTRK/: trktypes.h
include/amcstubs/: AmcExi2Stubs.h
include/dolphin/: PPCArch.h  ar.h  db.h  dsp.h  dvd.h  mtx.h  os.h  si.h  sipriv.h  trk.h  types.h  vi.h
include/dolphin/base/: PPCArch.h
include/jaudio_NES/: aramcall.h  audioheaders.h  audiostruct.h  audiothread.h  dummyrom.h  dvdthread.h  game64.h  ipldec.h
include/libc/: math.h  stdio.h
include/libc64/: __osMalloc.h  malloc.h  math64.h  sprintf.h
include/libforest/: batconfig.h  fault.h  gbi_extensions.h  osreport.h
include/libjsys/: jsyswrapper.h
include/libu64/: gfxprint.h
include/libultra/: initialize.h  libultra.h  osContPad.h  osMesg.h  osThread.h  os_thread.h  os_timer.h
src/: audio.c  c_keyframe.c  executor.c  f_furniture.c  famicom_emu.c  game.c  irqmgr.c  lb_rtc.c  main.c  padmgr.c  second_game.c  zurumode.c
src/actor/: ac_ball.c  ac_balloon.c  ac_boat_demo.c  ac_boxTrick01.c  ac_bridge_a.c  ac_event_manager.c  ac_fallSESW_draw.c_inc  ac_fallS_draw.c_inc  ac_insect.c  ac_mbg.c  ac_mural.c  ac_museum_insect_tonbo.c_inc  ac_my_room.c  ac_psnowman.c  ac_quest_talk_init.c  ac_reserve_draw.c_inc  ac_rope.c  ac_snowman.c  ac_train_door.c
src/effect/: ef_kaze_happa.c
src/furniture/: ac_ike_fish_tro2.c  ac_nog_koban.c  ac_nog_museum.c  ac_nog_uranai.c  ac_nog_yamishop.c  ac_nog_yubin.c  ac_tak_tailor.c  ac_yaz_fish_trophy.c
src/game/: m_actor.c  m_bg_tex.c  m_camera2.c  m_card.c  m_controller.c  m_debug_hayakawa.c  m_debug_mode.c  m_demo.c  m_event.c  m_font.c  m_lib.c  m_mail_password_check.c  m_play.c  m_prenmi.c  m_room_type.c  m_select.c  m_submenu.c  m_tag_ovl.c  m_vibctl.c
src/pc/: foresta_rel_stubs.c
src/static/: CMakeLists.txt  boot.c  dolphin_pc_stubs.c  dolphin_pc_stubs_gx.cpp  dvderr.c  initial_menu.c  jsyswrap.cpp
src/static/Famicom/: CMakeLists.txt  famicom.cpp  famicom_nesinfo.cpp  ks_nes_core.cpp  ks_nes_core_pc_stubs.cpp  ks_nes_draw.cpp
src/static/GBA2/: JoyBoot.c
src/static/JSystem/: CMakeLists.txt  jsystem_pc_stubs.cpp
src/static/JSystem/J2DGraph/: J2DGrafContext.cpp
src/static/JSystem/JFramework/: JFWDisplay.cpp  JFWSystem.cpp
src/static/JSystem/JGadget/: linklist.cpp
src/static/JSystem/JKernel/: JKRAram.cpp  JKRAramArchive.cpp  JKRAramHeap.cpp  JKRAramPiece.cpp  JKRAramStream.cpp  JKRArchivePri.cpp  JKRCompArchive.cpp  JKRDecomp.cpp  JKRDvdArchive.cpp  JKRDvdRipper.cpp  JKRExpHeap.cpp  JKRFile.cpp  JKRFileLoader.cpp  JKRHeap.cpp  JKRMemArchive.cpp  JKRThread.cpp
src/static/JSystem/JUtility/: JUTConsole.cpp  JUTDbPrint.cpp  JUTDirectPrint.cpp  JUTException.cpp  JUTFontData_Ascfont_fix12_pc.s.in  JUTGamePad.cpp  JUTResFont.cpp
src/static/MSL_C.PPCEABI.bare.H/: FILE_POS.c  ansi_files.c
src/static/Runtime.PPCEABI.H/: __mem.c
src/static/TRK_MINNOW_DOLPHIN/: dolphin_trk_glue.c  targcont.c
src/static/dolphin/base/: PPCArch.c
src/static/dolphin/card/: CARDBios.c  CARDCreate.c  CARDDelete.c  CARDFormat.c  CARDMount.c  CARDRaw.c  CARDRdwr.c  CARDRead.c  CARDStat.c  CARDStatEx.c  CARDWrite.c  __card.h
src/static/dolphin/dvd/: __dvd.h  dvd.c  dvdfs.c  dvdqueue.c  fstload.c
src/static/dolphin/exi/: EXIAd16.c  EXIBios.c  EXIUart.c
src/static/dolphin/gba/: GBAGetProcessStatus.c
src/static/dolphin/gx/: GXAttr.c  GXDisplayList.c  GXFifo.c  GXFrameBuf.c  GXLight.c  GXMisc.c  GXVerifRAS.c  __gx.h
src/static/dolphin/mtx/: mtx.c  mtxvec.c
src/static/dolphin/os/: OS.c  OSAlarm.c  OSAlloc.c  OSArena.c  OSAudioSystem.c  OSCache.c  OSContext.c  OSError.c  OSFont.c  OSLink.c  OSMemory.c  OSMessage.c  OSMutex.c  OSReset.c  OSRtc.c  OSStopwatch.c  OSThread.c  OSTime.c  __os.h  __ppc_eabi_init.cpp  __start.c
src/static/dolphin/pad/: Pad.c
src/static/dolphin/si/: SIBios.c
src/static/jaudio_NES/: CMakeLists.txt
src/static/jaudio_NES/game/: OSAttention.c_inc  audioheaders.c  emusound.c  game64.c_inc  kappa.c  radio.c  rhythm.c  staff.c
src/static/jaudio_NES/internal/: aictrl.c  aramcall.c  audiothread.c  bankdrv.c  cmdstack.c  connect.c  cpubuf.c  driver.c  driverinterface.c  dsp_GBAKey.c  dsp_cardunlock.c  dspboot.c  dspbuf.c  dspdriver.c  dspinterface.c  dspproc.c  dummyrom.c  dvdthread.c  fxinterface.c  heapctrl.c  ja_calc.c  jammain_2.c  memory.c  midplay.c  neosthread.c  os.c  playercall.c  rspsim.c  sample.c  seqsetup.c  streamctrl.c  sub_sys.c  system.c  track.c
src/static/libc64/: CMakeLists.txt  __osMalloc.c  malloc.c  math64.c  sleep.c  sprintf.c
src/static/libforest/: CMakeLists.txt  fault.c  osreport.c
src/static/libforest/emu64/: emu64.cpp  emu64_print.cpp  emu64_utility.cpp
src/static/libjsys/: CMakeLists.txt  jsyswrapper.cpp  jsyswrapper_main.cpp
src/static/libu64/: CMakeLists.txt  gfxprint_data.c
src/static/libultra/: CMakeLists.txt  contreaddata.c  controller.c  contsetch.c  createmesgqueue.c  createthread.c  destroythread.c  getthreadid.c  sendmesg.c  shutdown.c  stoptimer.c  ultra.c
src/static/libultra/gu/: lookat.c  lookathil.c  normalize.c  perspective.c  rotate.c
src/system/: sys_matrix.c  sys_romcheck.c
(+1930 files in other folders)
